--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spw-sample",
   "version": "1.0.0",
-  "description": "The sample project for the simple-web-image package.",
+  "description": "The example project for the simple-web-image library.",
   "main": "src/server.js",
   "scripts": {
     "build": "npx tsc",
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "simple-web-image": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
